# gst-plugins-bad

./: configure.ac
docs/plugins/: gst-plugins-bad-plugins.hierarchy
ext/: Makefile.am
ext/mir/: Makefile.am  gstmirsink.c  gstmirsink.h  mirpool.c  mirpool.h
gst-libs/gst/: Makefile.am
gst-libs/gst/mir/: Makefile.am  gstmircontext.c  gstmircontext.h  mirallocator.c  mirallocator.h
sys/androidmedia/: Makefile.am  gstamc-constants.h  gstamc.h  gstamcaudiodechybris.c  gstamchybris.c  gstamcvideodec.h  gstamcvideodechybris.c
tests/check/: Makefile.am
tests/check/pipelines/: gstamcvideodec.c  gstamcvideodec_egl.c
